--- a/1.profile-cell-lines/7.select_images_to_print.md
+++ b/1.profile-cell-lines/7.select_images_to_print.md
@@ -1,9 +1,7 @@
----
-title: "Select images to print"
-output: github_document
----
+Select images to print
+================
 
-```{r message=FALSE}
+``` r
 knitr::opts_chunk$set(echo = TRUE)
 library(glue)
 library(magrittr)
@@ -11,9 +9,9 @@ library(stringr)
 library(tidyverse)
 ```
 
-## Prepare load_data 
+## Prepare load\_data
 
-```{r prepare_load_data, message=FALSE}
+``` r
 load_data <- 
   list.files("../load_data_csv/", pattern = "load_data.csv", full.names = T, recursive = T)  %>%
   map_df(read_csv)
@@ -41,12 +39,11 @@ for (channel in channels) {
     mutate(!!url_sym := convert_to_s3_url((!!path_sym), (!!file_sym)))
   
 }
-
 ```
 
 ## Get metadata
 
-```{r message=FALSE}
+``` r
 plates <- c("cmqtlpl1.5-31-2019-mt",
             "cmqtlpl261-2019-mt",
             "BR00106708",
@@ -74,20 +71,22 @@ metadata <-
         distinct()
     }
   )
-
-
 ```
 
 ## Confirm that the plating density is the same across all lines
 
-```{r}
+``` r
 metadata %>% distinct(Metadata_plating_density)
 ```
 
+    ## # A tibble: 1 x 1
+    ##   Metadata_plating_density
+    ##   <chr>                   
+    ## 1 10000
 
 ## Sample one well per cell line
 
-```{r}
+``` r
 set.seed(5)
 
 metadata_sampled <-
@@ -99,14 +98,13 @@ metadata_sampled <-
 
 ## Select a fixed field (a.k.a site)
 
-```{r}
+``` r
 fieldID <- 5
 ```
 
 ## Select images to be printed
 
-```{r}
-
+``` r
 filenames_header <- paste0("FileName_Orig", channels)
 
 images <- 
@@ -129,10 +127,9 @@ images %<>%
 
 images %>% 
   write_csv("data/images_to_download.csv")
-
 ```
 
-```{sh}
+``` sh
 # IMAGE_DIR=/tmp/cmqtl
 # 
 # mkdir -p $IMAGE_DIR
@@ -153,9 +150,8 @@ images %>%
   
 ```
 
-```{r}
+``` r
 images %>%
   select(matches("^Metadata"),  matches("^FileName_Orig")) %>%
   write_csv("data/gwas_images.csv")
 ```
-
