Save list of na

--- a/1.profile-cell-lines/8.inspect-plate-7.md
+++ b/1.profile-cell-lines/8.inspect-plate-7.md
@@ -111,6 +111,13 @@ na_frequency <-
 
 ``` r
 na_frequency %>%
+  arrange(desc(number_of_na)) %>%
+  filter(number_of_na >= 0) %>%
+  write_csv("data/plate7_na_features.csv")
+```
+
+``` r
+na_frequency %>%
   filter(number_of_na >= 10) %>%
   arrange(desc(number_of_na)) %>%
   knitr::kable()
