--- a/1.profile-cell-lines/8.inspect-plate-7.md
+++ b/1.profile-cell-lines/8.inspect-plate-7.md
@@ -1,6 +1,24 @@
 Inspect cmQTLplate7-2-27-20
 ================
 
+If running interactively in RStudio,
+
+  - change `output` in the header of this markdown to `html_notebook`
+    and
+  - change to `eval=TRUE` below
+
+When knitting for pushing to GitHub,
+
+  - change `output` in the header of this markdown to `github_document`
+    and
+  - change to `eval=FALSE` below
+
+<!-- end list -->
+
+``` r
+show_table <- knitr::kable
+```
+
 ``` r
 suppressPackageStartupMessages(library(magrittr))
 suppressPackageStartupMessages(library(tidyverse))
@@ -120,7 +138,7 @@ na_frequency %>%
 na_frequency %>%
   filter(number_of_na >= 10) %>%
   arrange(desc(number_of_na)) %>%
-  knitr::kable()
+  show_table
 ```
 
 | name                                             | number\_of\_na |
@@ -174,7 +192,7 @@ na_flag %>%
   filter(number_of_na >= 10) %>%
   arrange(desc(number_of_na)) %>% 
   filter(!str_detect(name, "_Correlation_")) %>%
-  knitr::kable()
+  show_table
 ```
 
 | name | number\_of\_na |
@@ -250,3 +268,142 @@ summary(model)
     ## Residual standard error: 0.9981 on 4990 degrees of freedom
     ## Multiple R-squared:  0.004344,   Adjusted R-squared:  0.003745 
     ## F-statistic: 7.257 on 3 and 4990 DF,  p-value: 7.443e-05
+
+For what
+
+``` r
+sorted_features_by_na <- 
+  na_frequency %>%
+  filter(number_of_na >= 10) %>%
+  arrange(desc(number_of_na))
+```
+
+``` r
+na_flag_long <- 
+  na_flag %>%
+  select(-one_of(no_check_na_features)) %>%
+  select(-matches("_Costes_|_RWC_|_Manders_|_K_")) %>%
+  rownames_to_column("cell_id") %>%
+  mutate(cell_id = as.integer(cell_id)) %>%
+  pivot_longer(-cell_id)
+```
+
+``` r
+na_counts_per_cell <-
+  na_flag_long %>%
+  group_by(cell_id) %>%
+  summarize(value = sum(value)) %>%
+  arrange(desc(value))
+```
+
+``` r
+na_counts_per_cell %>%
+  slice(1:20) %>%
+  show_table
+```
+
+| cell\_id | value |
+| -------: | ----: |
+|      206 |  1875 |
+|      424 |  1875 |
+|      467 |  1875 |
+|      780 |  1875 |
+|     2353 |  1875 |
+|     3014 |  1875 |
+|     3630 |  1875 |
+|     4428 |  1875 |
+|     4472 |  1875 |
+|      768 |     9 |
+|     1281 |     6 |
+|     3227 |     6 |
+|     3570 |     6 |
+|     3684 |     6 |
+|     3840 |     6 |
+|     4772 |     6 |
+|      689 |     4 |
+|     1734 |     4 |
+|     2779 |     4 |
+|     3095 |     4 |
+
+``` r
+na_counts_per_cell %>% 
+  filter(value < 100) %>%
+  ggplot(aes(value)) + geom_histogram(binwidth = 1)
+```
+
+![](8.inspect-plate-7_files/figure-gfm/unnamed-chunk-18-1.png)<!-- -->
+
+``` r
+na_counts_per_cell %>% 
+  filter(between(value, 1, 100)) %>%
+  ggplot(aes(value)) + geom_histogram(binwidth = 1)
+```
+
+![](8.inspect-plate-7_files/figure-gfm/unnamed-chunk-19-1.png)<!-- -->
+
+``` r
+bad_cells <- 
+  na_counts_per_cell %>% 
+  filter(value > 100)
+
+na_flag_long %>% 
+  anti_join(bad_cells) %>%
+  filter(value == 1) %>%
+  select(name) %>%
+  group_by(name) %>%
+  tally() %>%
+  arrange(desc(n))
+```
+
+    ## Joining, by = c("cell_id", "value")
+
+    ## # A tibble: 1,888 x 2
+    ##    name                                            n
+    ##    <chr>                                       <int>
+    ##  1 Cells_Correlation_Overlap_DNA_Mito             12
+    ##  2 Cells_Location_Center_X                         9
+    ##  3 Cells_Location_Center_Y                         9
+    ##  4 Cells_Location_Center_Z                         9
+    ##  5 Cells_Texture_AngularSecondMoment_AGP_10_00     9
+    ##  6 Cells_Texture_AngularSecondMoment_AGP_10_01     9
+    ##  7 Cells_Texture_AngularSecondMoment_AGP_10_02     9
+    ##  8 Cells_Texture_AngularSecondMoment_AGP_10_03     9
+    ##  9 Cells_Texture_AngularSecondMoment_AGP_20_00     9
+    ## 10 Cells_Texture_AngularSecondMoment_AGP_20_01     9
+    ## # … with 1,878 more rows
+
+``` r
+cells_with_na <- 
+  na_flag_long %>% 
+  anti_join(
+    na_counts_per_cell %>% 
+      filter(value > 100) %>%
+      select(cell_id)
+  ) %>%
+  group_by(cell_id) %>%
+  summarize(has_na_feature = sum(value) > 0) %>%
+  filter(has_na_feature)
+```
+
+    ## Joining, by = "cell_id"
+
+First remove these many “bad” cells (many features are `NA`)
+
+``` r
+bad_cells %>% count %>% show_table
+```
+
+| n |
+| -: |
+| 9 |
+
+Next remove all Correlation features, then report how many cells have
+any feature as `NA`
+
+``` r
+cells_with_na %>% count %>% show_table
+```
+
+|  n |
+| -: |
+| 21 |
