--- a/1.profile-cell-lines/8.inspect-plate-7.md
+++ b/1.profile-cell-lines/8.inspect-plate-7.md
@@ -269,8 +269,6 @@ summary(model)
     ## Multiple R-squared:  0.004344,   Adjusted R-squared:  0.003745 
     ## F-statistic: 7.257 on 3 and 4990 DF,  p-value: 7.443e-05
 
-For what
-
 ``` r
 sorted_features_by_na <- 
   na_frequency %>%
@@ -352,25 +350,35 @@ na_flag_long %>%
   select(name) %>%
   group_by(name) %>%
   tally() %>%
-  arrange(desc(n))
+  arrange(desc(n)) %>%
+  slice(1:20) %>%
+  show_table
 ```
 
     ## Joining, by = c("cell_id", "value")
 
-    ## # A tibble: 1,888 x 2
-    ##    name                                            n
-    ##    <chr>                                       <int>
-    ##  1 Cells_Correlation_Overlap_DNA_Mito             12
-    ##  2 Cells_Location_Center_X                         9
-    ##  3 Cells_Location_Center_Y                         9
-    ##  4 Cells_Location_Center_Z                         9
-    ##  5 Cells_Texture_AngularSecondMoment_AGP_10_00     9
-    ##  6 Cells_Texture_AngularSecondMoment_AGP_10_01     9
-    ##  7 Cells_Texture_AngularSecondMoment_AGP_10_02     9
-    ##  8 Cells_Texture_AngularSecondMoment_AGP_10_03     9
-    ##  9 Cells_Texture_AngularSecondMoment_AGP_20_00     9
-    ## 10 Cells_Texture_AngularSecondMoment_AGP_20_01     9
-    ## # … with 1,878 more rows
+| name                                                     |  n |
+| :------------------------------------------------------- | -: |
+| Cells\_Correlation\_Overlap\_DNA\_Mito                   | 12 |
+| Cells\_Location\_Center\_X                               |  9 |
+| Cells\_Location\_Center\_Y                               |  9 |
+| Cells\_Location\_Center\_Z                               |  9 |
+| Cells\_Texture\_AngularSecondMoment\_AGP\_10\_00         |  9 |
+| Cells\_Texture\_AngularSecondMoment\_AGP\_10\_01         |  9 |
+| Cells\_Texture\_AngularSecondMoment\_AGP\_10\_02         |  9 |
+| Cells\_Texture\_AngularSecondMoment\_AGP\_10\_03         |  9 |
+| Cells\_Texture\_AngularSecondMoment\_AGP\_20\_00         |  9 |
+| Cells\_Texture\_AngularSecondMoment\_AGP\_20\_01         |  9 |
+| Cells\_Texture\_AngularSecondMoment\_AGP\_20\_02         |  9 |
+| Cells\_Texture\_AngularSecondMoment\_AGP\_20\_03         |  9 |
+| Cells\_Texture\_AngularSecondMoment\_AGP\_5\_00          |  9 |
+| Cells\_Texture\_AngularSecondMoment\_AGP\_5\_01          |  9 |
+| Cells\_Texture\_AngularSecondMoment\_AGP\_5\_02          |  9 |
+| Cells\_Texture\_AngularSecondMoment\_AGP\_5\_03          |  9 |
+| Cells\_Texture\_AngularSecondMoment\_Brightfield\_10\_00 |  9 |
+| Cells\_Texture\_AngularSecondMoment\_Brightfield\_10\_01 |  9 |
+| Cells\_Texture\_AngularSecondMoment\_Brightfield\_10\_02 |  9 |
+| Cells\_Texture\_AngularSecondMoment\_Brightfield\_10\_03 |  9 |
 
 ``` r
 cells_with_na <- 
