--- a/1.profile-cell-lines/7.select_images_to_print.md
+++ b/1.profile-cell-lines/7.select_images_to_print.md
@@ -99,7 +99,7 @@ metadata_sampled <-
 ## Select a fixed field (a.k.a site)
 
 ``` r
-fieldID <- 5
+fieldIDs <- c(3, 5)
 ```
 
 ## Select images to be printed
@@ -111,7 +111,7 @@ images <-
   load_data %>%
   select(Metadata_Plate, Metadata_Well, Metadata_Row, Metadata_FieldID, matches("^URL_"), one_of(filenames_header)) %>%
   inner_join(metadata_sampled, by = c("Metadata_Plate", "Metadata_Well")) %>%
-  filter(Metadata_FieldID == fieldID) %>%
+  filter(Metadata_FieldID %in% fieldIDs) %>%
   select(matches("^Metadata"), matches("^URL"), matches("^FileName_Orig"))
 
 images_pivoted <-
