--- a/1.profile-cell-lines/5.inspect-all-profiles.md
+++ b/1.profile-cell-lines/5.inspect-all-profiles.md
@@ -3,6 +3,24 @@ Inspect profiles
 Shantanu Singh
 October 2019
 
+If running interactively in RStudio,
+
+  - change `output` in the header of this markdown to `html_notebook`
+    and
+  - change to `eval=TRUE` below
+
+When knitting for pushing to GitHub,
+
+  - change `output` in the header of this markdown to `github_document`
+    and
+  - change to `eval=TRUE` below
+
+<!-- end list -->
+
+``` r
+show_table <- knitr::kable
+```
+
 ``` r
 library(ggplot2)
 library(glue)
@@ -10,19 +28,19 @@ library(magrittr)
 library(tidyverse)  
 ```
 
-    ## ── Attaching packages ──────────────────────────────────────────────────────────────────────────────────────────────────────────────── tidyverse 1.2.1 ──
+    ## ── Attaching packages ───────────────────────────────────────────────────────────────────────────────── tidyverse 1.3.0 ──
 
-    ## ✔ tibble  2.1.3     ✔ purrr   0.3.3
-    ## ✔ tidyr   1.0.0     ✔ dplyr   0.8.3
-    ## ✔ readr   1.3.1     ✔ stringr 1.4.0
-    ## ✔ tibble  2.1.3     ✔ forcats 0.4.0
+    ## ✓ tibble  3.0.1     ✓ dplyr   0.8.5
+    ## ✓ tidyr   1.0.2     ✓ stringr 1.4.0
+    ## ✓ readr   1.3.1     ✓ forcats 0.5.0
+    ## ✓ purrr   0.3.4
 
-    ## ── Conflicts ─────────────────────────────────────────────────────────────────────────────────────────────────────────────────── tidyverse_conflicts() ──
-    ## ✖ dplyr::collapse()  masks glue::collapse()
-    ## ✖ tidyr::extract()   masks magrittr::extract()
-    ## ✖ dplyr::filter()    masks stats::filter()
-    ## ✖ dplyr::lag()       masks stats::lag()
-    ## ✖ purrr::set_names() masks magrittr::set_names()
+    ## ── Conflicts ──────────────────────────────────────────────────────────────────────────────────── tidyverse_conflicts() ──
+    ## x dplyr::collapse()  masks glue::collapse()
+    ## x tidyr::extract()   masks magrittr::extract()
+    ## x dplyr::filter()    masks stats::filter()
+    ## x dplyr::lag()       masks stats::lag()
+    ## x purrr::set_names() masks magrittr::set_names()
 
 # Read profiles
 
@@ -32,7 +50,8 @@ plates <- c("BR00106708",
             "BR00107338", 
             "BR00107339", 
             "cmqtlpl1.5-31-2019-mt", 
-            "cmqtlpl261-2019-mt"
+            "cmqtlpl261-2019-mt",
+            "cmQTLplate7-7-22-20"
 )
 
 plate_id <- plates[[1]]
@@ -68,14 +87,14 @@ profiles %>%
   group_by(Metadata_line_ID) %>%
   tally(name = "n_plates") %>%
   group_by(n_plates) %>%
-  tally(name = "n_lines")
+  tally(name = "n_lines") %>%
+  show_table
 ```
 
-    ## # A tibble: 2 x 2
-    ##   n_plates n_lines
-    ##      <int>   <int>
-    ## 1        1     257
-    ## 2        2      10
+| n\_plates | n\_lines |
+| --------: | -------: |
+|         1 |      291 |
+|         2 |       17 |
 
 List cell lines that are present on more than one plate
 
@@ -87,31 +106,45 @@ profiles %>%
   filter(n_plates == 2) %>%
   inner_join(profiles %>% distinct(Metadata_Plate, Metadata_line_ID)) %>%
   ungroup() %>%
-  arrange(Metadata_line_ID)
+  arrange(Metadata_line_ID) %>%
+  show_table
 ```
 
     ## Joining, by = "Metadata_line_ID"
 
-    ## # A tibble: 20 x 3
-    ##    Metadata_line_ID n_plates Metadata_Plate       
-    ##               <dbl>    <int> <chr>                
-    ##  1                1        2 cmqtlpl1.5-31-2019-mt
-    ##  2                1        2 cmqtlpl261-2019-mt   
-    ##  3                2        2 cmqtlpl1.5-31-2019-mt
-    ##  4                2        2 cmqtlpl261-2019-mt   
-    ##  5               49        2 BR00106709           
-    ##  6               49        2 cmqtlpl261-2019-mt   
-    ##  7               50        2 BR00106709           
-    ##  8               50        2 cmqtlpl261-2019-mt   
-    ##  9               95        2 BR00106708           
-    ## 10               95        2 BR00106709           
-    ## 11               96        2 BR00106708           
-    ## 12               96        2 BR00106709           
-    ## 13              141        2 BR00106708           
-    ## 14              141        2 BR00107339           
-    ## 15              142        2 BR00106708           
-    ## 16              142        2 BR00107339           
-    ## 17              187        2 BR00107338           
-    ## 18              187        2 BR00107339           
-    ## 19              188        2 BR00107338           
-    ## 20              188        2 BR00107339
+| Metadata\_line\_ID | n\_plates | Metadata\_Plate       |
+| -----------------: | --------: | :-------------------- |
+|                  1 |         2 | cmqtlpl1.5-31-2019-mt |
+|                  1 |         2 | cmqtlpl261-2019-mt    |
+|                  2 |         2 | cmqtlpl1.5-31-2019-mt |
+|                  2 |         2 | cmqtlpl261-2019-mt    |
+|                 14 |         2 | cmqtlpl1.5-31-2019-mt |
+|                 14 |         2 | cmQTLplate7-7-22-20   |
+|                 28 |         2 | cmqtlpl1.5-31-2019-mt |
+|                 28 |         2 | cmQTLplate7-7-22-20   |
+|                 49 |         2 | BR00106709            |
+|                 49 |         2 | cmqtlpl261-2019-mt    |
+|                 50 |         2 | BR00106709            |
+|                 50 |         2 | cmqtlpl261-2019-mt    |
+|                 55 |         2 | cmqtlpl261-2019-mt    |
+|                 55 |         2 | cmQTLplate7-7-22-20   |
+|                 95 |         2 | BR00106708            |
+|                 95 |         2 | BR00106709            |
+|                 96 |         2 | BR00106708            |
+|                 96 |         2 | BR00106709            |
+|                117 |         2 | BR00106709            |
+|                117 |         2 | cmQTLplate7-7-22-20   |
+|                129 |         2 | BR00106709            |
+|                129 |         2 | cmQTLplate7-7-22-20   |
+|                141 |         2 | BR00106708            |
+|                141 |         2 | BR00107339            |
+|                142 |         2 | BR00106708            |
+|                142 |         2 | BR00107339            |
+|                187 |         2 | BR00107338            |
+|                187 |         2 | BR00107339            |
+|                188 |         2 | BR00107338            |
+|                188 |         2 | BR00107339            |
+|                231 |         2 | BR00107339            |
+|                231 |         2 | cmQTLplate7-7-22-20   |
+|                253 |         2 | BR00107338            |
+|                253 |         2 | cmQTLplate7-7-22-20   |
