--- a/1.profile-cell-lines/9.inspect-new-plate-7.md
+++ b/1.profile-cell-lines/9.inspect-new-plate-7.md
@@ -93,12 +93,12 @@ Load the subsample
 sampled_cells <- read_csv("data/cmQTLplate7-7-22-20_sampled.csv.gz")
 ```
 
-    ## Parsed with column specification:
+    ## 
+    ## ── Column specification ────────────────────────────────────────────────────────
     ## cols(
     ##   .default = col_double()
     ## )
-
-    ## See spec(...) for full column specifications.
+    ## ℹ Use `spec()` for the full column specifications.
 
 Specify which features are going to be check for NA `Area` features are
 excluded because we are going to use them to check whether they may be
@@ -235,6 +235,8 @@ na_counts_per_cell <-
   arrange(desc(value))
 ```
 
+    ## `summarise()` ungrouping output (override with `.groups` argument)
+
 ``` r
 na_counts_per_cell %>%
   slice(1:20) %>%
@@ -335,6 +337,8 @@ cells_with_na <-
 ```
 
     ## Joining, by = "cell_id"
+
+    ## `summarise()` ungrouping output (override with `.groups` argument)
 
 First remove these many “bad” cells (many features are `NA`)
 
